--- a/src/components/_banner.scss
+++ b/src/components/_banner.scss
@@ -1,4 +1,4 @@
-// Global style
+// Global styles
 
 .banner {
     position: relative;
@@ -23,17 +23,17 @@
   // Specific styles
 
   .banner-note-enchantee {
-    background-image: url("../../public/images/restaurants/large/la-note-enchantee.jpg");
+    background-image: url("../../../public/images/restaurants/large/la-note-enchantee.jpg");
   }
 
   .banner-a-la-francaise {
-    background-image: url("../../public/images/restaurants/large/a-la-francaise.jpg");
+    background-image: url("../../../public/images/restaurants/large/a-la-francaise.jpg");
   }
 
   .banner-la-palette-du-gout {
-    background-image: url("../../public/images/restaurants/large/palette-du-gout.jpg");
+    background-image: url("../../../public/images/restaurants/large/palette-du-gout.jpg");
   }
 
   .banner-le-delice-des-sens {
-    background-image: url("../../public/images/restaurants/large/le-delice-des-sens.jpg");
+    background-image: url("../../../public/images/restaurants/large/le-delice-des-sens.jpg");
   }
