--- a/src/components/_loading-spinner.scss
+++ b/src/components/_loading-spinner.scss
@@ -33,7 +33,7 @@
     font-size: 2rem;
     left: 33px;
     top: 45%;
-    font-family: 'Shrikhand', cursive;
+    font-family: $logo-title;
   }
 @keyframes loading-spinner {
 0% {
