--- a/src/layouts/_hero.scss
+++ b/src/layouts/_hero.scss
@@ -16,8 +16,7 @@
 .cta {
     background-color: $section-background-color-light;
     margin-top: 0;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 20px;
 }
 
 .cta__subtitle {
