--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,4 +1,7 @@
-// Color variables
+  /////////////////////
+ // COLOR VARIABLES //
+/////////////////////
+
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
@@ -6,7 +9,22 @@ $tertiary-color: #99E2D0;
 $section-background-color-light: #f6f6f6;
 $section-background-color-dark: #353535;
 
-// Breakpoints maps
+  ////////////////////
+ // FONT VARIABLES //
+////////////////////
+
+// Font families
+$body-font: 'Roboto', sans-serif;
+$logo-title: 'Shrikhand', cursive;
+
+// Font sizes
+
+$menu-title: 1.7rem;
+
+
+  //////////////////////
+ // BREAKPOINTS MAPS //
+//////////////////////
 
 $breakpoints: (
   tablet: 810px,
