--- a/src/components/_banner.scss
+++ b/src/components/_banner.scss
@@ -1,3 +1,5 @@
+@use "../utils/variables";
+
 // Global styles
 
 .banner {
@@ -16,7 +18,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    background: $section-background-color-light;
+    background: variables.$section-background-color-light;
     height: 10%;
   }
 
