--- a/src/components/_loading-spinner.scss
+++ b/src/components/_loading-spinner.scss
@@ -1,3 +1,5 @@
+@use "../utils/variables";
+
 .loading-screen {
     position: fixed;
     display: flex;
@@ -23,7 +25,7 @@
     margin: 8px;
     border-radius: 50%;
     border: 6px solid #fff;
-    border-color: $primary-color transparent $secondary-color transparent;
+    border-color: variables.$primary-color transparent variables.$secondary-color transparent;
     animation: loading-spinner 1.2s linear infinite;
   }
 
@@ -33,7 +35,7 @@
     font-size: 2rem;
     left: 33px;
     top: 45%;
-    font-family: $logo-title;
+    font-family: variables.$logo-title;
   }
 @keyframes loading-spinner {
 0% {
