--- a/src/components/_plate-selection-animation.scss
+++ b/src/components/_plate-selection-animation.scss
@@ -1,3 +1,5 @@
+@use "../utils/variables";
+
 // TO DO : Improve effect in reverse motion.
 
 /* Initial state */
@@ -26,7 +28,7 @@
 .menu__check {
     width: 0;
     height: 100%;
-    background-color: $tertiary-color;
+    background-color: variables.$tertiary-color;
     transition: 0.4s;
 }
 
