feat: mailto link on menu pages and improvements - Added mailto link on menu pages. - Fixed blurry text on growing items (restaurants cards and fonctionnement items). - Fixed overlapping of the price on hover animation (menu pages). - Added aditional comments.

--- a/src/components/_banner.scss
+++ b/src/components/_banner.scss
@@ -1,6 +1,6 @@
 @use "../utils/variables";
 
-// Global styles
+/* Global banner styles */
 
 .banner {
     position: relative;
@@ -22,7 +22,7 @@
     height: 10%;
   }
 
-  // Specific styles
+/* Specific banner styles */
 
   .banner-note-enchantee {
     background-image: url("../../../public/images/restaurants/large/la-note-enchantee.jpg");
