--- a/src/components/_heart.scss
+++ b/src/components/_heart.scss
@@ -1,6 +1,7 @@
 @use "../utils/variables";
 
-// Cache la checkbox d'origine
+// Style of the heart button
+
 .restaurants__favourite input,
 .menu__favourite input {
     display: none;
