--- a/src/pages/_menus.scss
+++ b/src/pages/_menus.scss
@@ -53,3 +53,11 @@
         min-width: 0;
     }
 }
+
+// Validation button position
+
+.menu__btn-validatation {
+    display: flex;
+    justify-content: center;
+    padding: 25px 0 50px 0;
+}
