--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -54,10 +54,11 @@ header
     border-radius: 15px;
     background-color: variables.$section-background-color-light;
     @include mixins.shadow-border;
+    cursor: pointer;
     transition: 0.4s;
-    backface-visibility: hidden;
+    backface-visibility: hidden; // For rendering improvements
     &:hover {      
-        transform: scale(1.1) translate3d(0,0,0);   
+        transform: scale(1.1) translate3d(0,0,0); // transform: translateZ(0); for rendering improvements (add hardware acceleration to the animation)  
     }
 }
 
