fix: icons style and heart animation - Changed mobile icon (fonctionnement section). From feathericons to Font Awesome. - Changed list icon (fonctionnement section). From feathericons to Font Awesome. - Changed location icon (hero section). From feathericons to Font Awesome. - Changed heart animation (turned click animation into a hover animation). - Changed color of the fonctionnement icons. - Added space between icon location and text location. - Moved icon style rules from _home partial to _icons partial.

--- a/src/components/_heart.scss
+++ b/src/components/_heart.scss
@@ -17,6 +17,19 @@
 
 .heart:hover::before {
     cursor: pointer;
+    content: "\f004";
+    background: linear-gradient(variables.$primary-color, variables.$secondary-color);
+    background-clip: text;
+	color: transparent;
+    font-family: "FontAwesome";
+    transform: scale(1.3);
+}
+
+/**
+* Heart animation on click version, width different hover effect.
+
+.heart:hover::before {
+    cursor: pointer;
     color: variables.$secondary-color;
 }
 
@@ -28,4 +41,4 @@ input:checked + .heart::before
 	color: transparent;
     font-family: "FontAwesome";
     transform: scale(1.3);
-}
+} */
