--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -21,6 +21,13 @@ $logo-title: 'Shrikhand', cursive;
 
 $menu-title: 1.7rem;
 
+  /////////////////////
+ // ICONS VARIABLES //
+/////////////////////
+
+$icon-width: 17px;
+$icon-height: 17px;
+
 
   //////////////////////
  // BREAKPOINTS MAPS //
