feat: background hover effect on fonctionnement - Background color change on hover on "fonctionnement items".

--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -59,7 +59,8 @@ header
     transition: 0.4s;
     backface-visibility: hidden; // For rendering improvements
     &:hover {      
-        transform: scale(1.1) translate3d(0,0,0); // transform: translateZ(0); for rendering improvements (add hardware acceleration to the animation)  
+        transform: scale(1.1) translate3d(0,0,0); // transform: translateZ(0); for rendering improvements (add hardware acceleration to the animation)
+        background-color: #f5edff;
     }
 }
 
